Fixed spacing error in header h1

--- a/css/main.css
+++ b/css/main.css
@@ -57,9 +57,7 @@ header h1 {
 	padding: 38px 0 25px 0;
 	border-bottom: 3px solid #77a466;
 	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	text-align: center;
 }
 header h1 span {
 	color: #77a466;
@@ -125,7 +123,7 @@ header nav ul li a{
 }
 
 .section-one h3 {
-	padding: 10px 0;
+
 }
 
 .section-two {
@@ -183,7 +181,7 @@ footer span {
 .bottom-section {
 	display: flex;
 	justify-content: center;
-
+	align-items: flex-start;
 }
 
 .section-one {
@@ -193,13 +191,12 @@ footer span {
 .section-two {
 	border-left: 1px solid #eee;
 	border-right: 1px solid #eee;
-	padding: 10px 20px 0 20px;
+	padding: 0 15px 0 15px;
 	flex-basis: 400px;
-
 }
 
 .section-three {
-	padding: 10px 0 0 20px;
+	padding-left: 15px;
 	flex-basis: 400px;
 }
  
@@ -210,16 +207,15 @@ footer span {
 
 header {
 	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 header h1 {
 	width: 60%;
-	padding: 38px 0;
 	border-bottom: none;
 	text-align: left;
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
 }
 
 header nav {
